--- a/TwsPluginDemo/build.gradle
+++ b/TwsPluginDemo/build.gradle
@@ -28,4 +28,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    provided fileTree(include: ['*.jar'], dir: 'linklib')
 }
