--- a/TwsPluginDemo/src/main/AndroidManifest.xml
+++ b/TwsPluginDemo/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 如果不配置这个参数，表示这个插件是一个独立插件，即本身可以独立安装运行 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.plugindemo"
-    android:sharedUserId="com.tencent.tws.pluginhost"
+    android:sharedUserId="com.rick.tws.pluginhost"
     android:versionCode="2"
     android:versionName="2.0.1" >
 
