--- a/TwsPluginHost/src/main/AndroidManifest.xml
+++ b/TwsPluginHost/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
     <!-- 异常上报系统log -->
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
+    <!-- 连接网络权限 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 允许格式化可移除的存储仓库的文件系统 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <application
         android:name="com.rick.tws.pluginhost.main.HostApplication"
