add so code[Waiting for adjustment]

--- a/TwsPluginHost/build.gradle
+++ b/TwsPluginHost/build.gradle
@@ -11,6 +11,9 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
+        ndk {
+            abiFilters "armeabi-v7a"
+        }
     }
 
     buildTypes {
@@ -20,6 +23,15 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi-v7a'//select ABIs to build APKs for
+            //universalApk true //generate an additional APK that contains all the ABIs
         }
     }
 
