--- a/TwsPluginHost/build.gradle
+++ b/TwsPluginHost/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
         ndk {
-            abiFilters "armeabi-v7a"
+            abiFilters "armeabi", "armeabi-v7a", "x86"
         }
     }
 
@@ -23,15 +23,6 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    splits {
-        abi {
-            enable true
-            reset()
-            include 'armeabi-v7a'//select ABIs to build APKs for
-            //universalApk true //generate an additional APK that contains all the ABIs
         }
     }
 
