--- a/TwsPluginDemo/src/main/AndroidManifest.xml
+++ b/TwsPluginDemo/src/main/AndroidManifest.xml
@@ -30,16 +30,16 @@
         <!-- icon - 图标资源：统一使用 模块名_[hotseat or watch_fragment or menu]_描述信息.png 配置在AndroidManifest.xml不需要带后缀。 【normal/focus/press/...】 -->
         <!-- title - 标题：中文/英文 也可以只配置一个 -->
         <!-- actionid - DisplayItem的交互动作行为：如果是fragment 直接配置name,其他的配置类全名信息 -->
-        <!-- type - 交互动作行为@see DisplayItem.java：0 APPLICATION;1 BROADCAST； 2 ACTIVITY； 3 FRAGMENT； 4 SERVICE； 5 PROVIDER；6 VIEW -->
+        <!-- actiontype - 交互动作行为@see DisplayItem.java：0 APPLICATION;1 BROADCAST； 2 ACTIVITY； 3 FRAGMENT； 4 SERVICE； 5 PROVIDER；6 VIEW -->
         <!-- 插件启动时机： 1 手动触发 2 随DM启动 3 配对成功后 -->
         <!-- statistic - 统计上报key：string类型 -->
         <!-- extras - 附加信息：比如：插件依赖 1 已安装的app 2 已安装的插件 -->
-        <plugin-display android:value="y=0@x=3@title=示例Fragment/demoFragement/HK繁體碎片/TW繁體碎片@type=3@actionid=some_id_for_fragment2@icon=demo_hotseat_default/demo_hotseat_pressed" />
+        <plugin-display android:value="y=0@x=3@actiontype=3@actionid=some_id_for_fragment2@title=示例Fragment/demoFragement/HK繁體碎片/TW繁體碎片@icon=demo_hotseat_default/demo_hotseat_pressed" />
         <!--actionbar gemel Item 在宿主中定义好了 Y=2是actionbar ，actionbar的X位置定义：POS_X_ACTION_BAR_L = -1;POS_X_ACTION_BAR_TITLE = 0;POS_X_ACTION_BAR_SUBTITLE = 1;POS_X_ACTION_BAR_R = 2;POS_X_ACTION_BAR_MENU = 3;-->
         <plugin-display android:value="gemely=0@gemelx=3@x=0@y=2@title=实例/Demo/實例" />
-        <plugin-display android:value="gemely=0@gemelx=3@x=2@y=2@type=2@actionid=com.example.plugindemo.activity.LauncherActivity@icon=demo_rbar_nomal/demo_rbar_pressed" />
+        <plugin-display android:value="gemely=0@gemelx=3@x=2@y=2@actiontype=2@actionid=com.example.plugindemo.activity.LauncherActivity@icon=demo_rbar_nomal/demo_rbar_pressed" />
 
-        <plugin-display android:value="y=1@x=5@type=2@title=示例Activity/demoActivity/繁體Activity@actionid=com.example.plugindemo.activity.LauncherActivity@icon=demo_watch_fragment_des" />
+        <plugin-display android:value="y=1@x=5@actiontype=2@actionid=com.example.plugindemo.activity.LauncherActivity@title=示例Activity/demoActivity/繁體Activity@icon=demo_watch_fragment_des" />
 
 
         <!-- 通知插件框架哪些fragment是可以嵌入宿主Activity的，如果fragment只是插件内使用，无需对外暴露则无需配置 -->
