处理 点击底部hotseat 异常问题

--- a/TwsPluginShareLib/build.gradle
+++ b/TwsPluginShareLib/build.gradle
@@ -51,7 +51,7 @@ android {
 
         from('build/intermediates/classes/release/')
         from(project.zipTree("libs/qrom_component_log.jar"))
-        from(project.zipTree("fromlibs/android-support-v4-26.0.0.jar"))
+        from(project.zipTree("fromlibs/android-support-v4.jar"))
 
         destinationDir = file(build_sdk_dir)
 
@@ -63,6 +63,7 @@ android {
         include('com/rick/tws/**/*.class')
         include('qrom/component/**/*.class')
         include('android/support/v4/app/**/*.class')
+        include('android/support/annotation/**/*.class')
     }
 
     makeSdk.dependsOn(build)
