--- a/TwsPluginHost/src/main/AndroidManifest.xml
+++ b/TwsPluginHost/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Tws.Theme.Secondo">
         <activity android:name=".main.ui.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
