--- a/TwsPluginHost/src/main/AndroidManifest.xml
+++ b/TwsPluginHost/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
         <activity android:name=".main.ui.SettingsActivity" />
         <activity android:name=".main.ui.MessageManagerActivity" />
 
-        <!-- ============================Plugin配置============================ -->
+        <!-- ============================ Plugin Debug ============================ -->
         <activity
             android:name=".debug.DebugPluginActivity"
             android:screenOrientation="portrait" />
@@ -71,269 +71,8 @@
             android:name=".debug.PluginDetailActivity"
             android:screenOrientation="portrait" />
 
-
         <activity android:name=".debug.PluginFragmentActivity" />
 
-        <!-- core need-->
-        <provider
-            android:name="com.tws.plugin.manager.PluginManagerProvider"
-            android:authorities="com.rick.tws.pluginhost.manager"
-            android:exported="false" />
-
-        <!-- 对Receiver的类全名没有要求，可随意指定，框架中是通过action来查询。注册1个即可 -->
-        <receiver
-            android:name=".stub.PluginStubReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </receiver>
-
-        <!--
-            所有的插件中共有多少个Service, 这里就至少需要注册多少个对应的虚拟Service(也可以大于，实际上这里的数量只需>=可能同
-			时处于运行状态的service数量，一般预注册十来个应该绰绰有余了)，
-			这里的虚拟Service并不需要真实存在，
-			只是占个位置，运行实动态绑定到实际的插件Service
-			对service的类全名没有要求，可随意指定，框架中是通过action来查询。
-        -->
-        <service android:name=".stub.PluginStubService1">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service android:name=".stub.PluginStubService2">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service android:name=".stub.PluginStubService3">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service android:name=".stub.PluginStubService4">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service android:name=".stub.PluginStubService5">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service android:name=".stub.PluginStubService6">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service android:name=".stub.PluginStubService7">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service android:name=".stub.PluginStubService8">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".stub.PluginStubMPService0"
-            android:process=":plugin0">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.MP_STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".stub.PluginStubMPService1"
-            android:process=":plugin1">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.MP_STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".stub.PluginStubMPService2"
-            android:process=":plugin2">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.MP_STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".stub.PluginStubMPService3"
-            android:process=":plugin3">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.MP_STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".stub.PluginStubMPService4"
-            android:process=":plugin4">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.MP_STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </service>
-
-        <activity
-            android:name="com.tws.plugin.bridge.TwsPluginBridgeActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_BRIDGE" />
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="com.tws.plugin.bridge.category.SAMPLE_RAMP" />
-
-                <data android:scheme="qwallet1800001531" />
-                <data android:scheme="tsmclient" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity0"
-            android:exported="true"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity1"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity2"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity3"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity4"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity5"
-            android:exported="true"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity6"
-            android:exported="true"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity7"
-            android:exported="true"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity8"
-            android:exported="true"
-            android:launchMode="singleInstance"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity9"
-            android:exported="true"
-            android:launchMode="singleInstance"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".stub.PluginStubActivity10"
-            android:exported="true"
-            android:launchMode="singleInstance"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_DEFAULT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
